@@ -1,0 +1,57 @@
+# .pdkignore masks files from inclusion by `pdk build`.
+#
+# It is used by CI when building modules to publish to the Puppet Forge and to
+# mask symlinks from the `pdk build` test in the module's RELENG checks.
+# ------------------------------------------------------------------------------
+#         NOTICE: **This file is maintained with puppetsync**
+#
+# This file is automatically updated as part of a puppet module baseline.
+# The next baseline sync will overwrite any local changes made to this file.
+# ------------------------------------------------------------------------------
+.*.sw?
+.git/
+.metadata
+.yardoc
+.yardwarns
+*.iml
+/.bundle/
+/.idea/
+/.vagrant/
+/coverage/
+/bin/
+/doc/
+/Gemfile.local
+/Gemfile.lock
+/junit/
+/log/
+/pkg/
+/dist/
+/tmp/
+/vendor/
+/.vendor/
+/convert_report.txt
+/update_report.txt
+.DS_Store
+.project
+.envrc
+/inventory.yaml
+/appveyor.yml
+/.fixtures.yml
+/Gemfile
+/.gitattributes
+/.gitignore
+/.github/
+/.gitlab-ci.yml
+/.pdkignore
+/.puppet-lint.rc
+/.sync.yml
+/.pmtignore
+/Rakefile
+/rakelib/
+/.rspec
+/.rubocop.yml
+/.travis.yml
+/.yardopts
+/spec/
+/.vscode/
+/tests/
